# dprs

./: .envrc  .gitignore  Cargo.toml  LICENSE.md  README.md  devenv.nix  shell.nix
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
demo/: demo.tape  docker-compose.yml  dprs.tape  run_demo.sh
dprs/: Cargo.toml  README.md
dprs/src/: app.rs  display.rs  display.rs.1.bak  display.rs.1.diff.bak  docker_log_watcher.rs  main.rs  main.rs.1.bak  main.rs.1.diff.bak  main.rs.2.bak  main.rs.2.diff.bak  main.rs.3.bak  main.rs.3.diff.bak  main.rs.4.bak  main.rs.4.diff.bak  main.rs.5.bak  main.rs.5.diff.bak  main.rs.6.bak  main.rs.6.diff.bak  main.rs.7.bak  main.rs.7.diff.bak  mod.rs  mod.rs.1.diff.bak
dprs/src/app/: state_machine.rs  state_machine.rs.2.bak  state_machine.rs.2.diff.bak  state_machine.rs.3.diff.bak
dprs/src/app/actions/: copy_ip.rs
dprs/src/display/: hotkey_bar.rs  mod.rs.1.bak  process_list.rs  process_list.rs.1.bak  process_list.rs.1.diff.bak  process_list.rs.2.bak  process_list.rs.2.diff.bak
lib/durable/: dockerpage.rb
lib/durable/dockerpage/: version.rb
scripts/: build.sh  install.sh  release.sh  release_cargo.sh
src/: app.rs  display.rs  docker_log_watcher.rs  lib.rs  log_view.rs  mod.rs
src/app/: state_machine.rs
src/app/actions/: copy_ip.rs  mod.rs  open_browser.rs  restart.rs  stop_container.rs
src/app/actions/copy_ip/: tests.rs
src/app/actions/restart/: tests.rs
src/display/: filter_input.rs  hotkey_bar.rs  log_tabs.rs  process_list.rs  process_list_tabular.rs  toast.rs
src/display/hotkey_bar/: tests.rs
src/display/hotkey_bar/snapshots/: dprs__display__hotkey_bar__tests__hotkey_bar_render.snap
src/display/log_tabs/: tests.rs
src/display/process_list/: tests.rs
src/display/process_list/snapshots/: dprs__display__process_list__tests__container_list_styles.snap
src/display/toast/: tests.rs
src/dplw/: lib.rs  main_loop.rs  mod.rs
src/dprs/: mod.rs
src/dprs/app/: state_machine.rs
src/dprs/app/actions/: compose_actions.rs  copy_ip.rs  mod.rs  open_browser.rs  restart.rs  restart_selected.rs  stop_container.rs  stop_selected.rs
src/dprs/app/actions/copy_ip/: tests.rs
src/dprs/app/actions/restart/: tests.rs
src/dprs/app/actions/stop_selected/: tests.rs
src/dprs/commands/: commands.rs  handler.rs  mod.rs
src/dprs/display/: compose_view.rs  context_menu.rs  display.rs  filter_input.rs  hotkey_bar.rs  mod.rs  process_list.rs  process_list_tabular.rs  renderer.rs  toast.rs
src/dprs/display/hotkey_bar/: tests.rs
src/dprs/display/hotkey_bar/snapshots/: dprs__dprs__display__hotkey_bar__tests__hotkey_bar_render.snap
src/dprs/display/log_tabs/: tests.rs
src/dprs/display/log_tabs/snapshots/: dprs__display__log_tabs__tests__log_tabs_empty.snap  dprs__display__log_tabs__tests__log_tabs_with_selection.snap
src/dprs/display/process_list/: tests.rs
src/dprs/display/process_list/snapshots/: dprs__display__process_list__tests__container_list_render_empty.snap  dprs__display__process_list__tests__container_list_render_with_containers.snap  dprs__display__process_list__tests__container_list_with_selection.snap  dprs__dprs__display__process_list__tests__container_list_render_empty.snap  dprs__dprs__display__process_list__tests__container_list_render_with_containers.snap  dprs__dprs__display__process_list__tests__container_list_styles.snap  dprs__dprs__display__process_list__tests__container_list_with_selection.snap
src/dprs/display/toast/: tests.rs
src/dprs/modes/: handler.rs  mod.rs  modes.rs
src/shared/: mod.rs
src/shared/config/: config.rs  mod.rs  settings.rs
src/shared/display/: log_tabs.rs  log_view.rs  mod.rs
src/shared/docker/: docker_log_watcher.rs  mod.rs
src/shared/input/: input_watcher.rs  mod.rs
