[package]
name = "dprs"
version = "0.1.14"
edition = "2021"
authors = ["Durable Programming, LLC"]
license = "MIT"
readme = "README.md"
homepage = "https://durableprogramming.com/"
description = "dprs (Docker PRocesS viewer ) is a terminal user interface for managing Docker containers and monitoring their logs."
repository = "https://github.com/durableprogramming/dprs" 
keywords = ["docker", "tui", "cli", "process-manager", "logs"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
bollard = "0.19.2"
copypasta = "0.10.2"
copypasta-ext = "0.4.4"
crossterm = "0.29.0"
futures-util = "0.3"
ratatui = { version = "0.29.0", features=["macros"] }
regex = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.0"
dirs = "5.0.0"
tailspin = "5.5.0"
ansi-to-tui = "7.0.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
tachyonfx = "0.19.0"
chrono = "0.4"

[dev-dependencies]
insta = "1.43.1"
mockall = "0.13.1" 

[[bin]]
name = "dprs"
path = "src/bin/dprs.rs"

[[bin]]
name = "dplw"
path = "src/bin/dplw.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.deb]
maintainer = "Durable Programming, LLC <contact@durableprogramming.com>"
copyright = "2025, Durable Programming, LLC"
license-file = ["LICENSE.md", "4"]
extended-description = """\
DPRS (Docker PRocesS Manager) is a terminal user interface for managing Docker containers and monitoring their logs. Built with a focus on reliability, usability, and efficient container management.

Features:
- Container Management: List, stop, and manage running containers
- Log Monitoring: Real-time log streaming with color-coded levels
- Easy Navigation: Intuitive keyboard shortcuts
- Browser Integration: Open container web interfaces
- Clipboard Support: Copy container IP addresses

DPRS is designed to assist in software development workflows."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/dprs", "usr/bin/", "755"],
    ["target/release/dplw", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/dprs/", "644"],
    ["LICENSE.md", "usr/share/doc/dprs/", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/dprs", dest = "/usr/bin/dprs", mode = "755" },
    { source = "target/release/dplw", dest = "/usr/bin/dplw", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/dprs/README.md", mode = "644" },
    { source = "LICENSE.md", dest = "/usr/share/doc/dprs/LICENSE.md", mode = "644" },
]
